<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200" >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_character_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbl_character_details"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:contentInsetLeft="0dp"
            android:contentInsetStart="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            android:contentInsetRight="0dp"
            android:contentInsetEnd="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetEnd="0dp"
            android:elevation="4dp" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_back_btn_character_details"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="12dp"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    app:tint="@android:color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_toolbar_title_character_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/AppCore.Headline.Tablayout"
                    android:text="@string/d_character_details_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.40"
                    app:layout_constraintStart_toEndOf="@+id/iv_back_btn_character_details"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/sv_character_details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/abl_character_details"
        app:layout_constraintBottom_toBottomOf="parent" >

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_character_selection_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardMaxElevation="6dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_character_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp" >

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_avatar_character_details"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dip"
                    android:stretchColumns="*"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_avatar_character_details">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_name_label_character_details"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            style="@style/AppCore.Title2"
                            android:text="@string/d_character_details_name"
                            android:gravity="start" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_name_character_details"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            style="@style/AppCore.Title1"
                            android:gravity="end" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dip" >

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_occupation_label_character_details"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/d_character_details_occupation"
                            style="@style/AppCore.Title2"
                            android:gravity="start" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_occupation_character_details"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            style="@style/AppCore.Title1"
                            android:gravity="end" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dip" >

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_status_label_character_details"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/d_character_details_status"
                            style="@style/AppCore.Title2"
                            android:gravity="start" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_status_character_details"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            style="@style/AppCore.Title1"
                            android:gravity="end" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dip" >

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_nickname_label_character_details"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/d_character_details_nickname"
                            style="@style/AppCore.Title2"
                            android:gravity="start" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_nickname_character_details"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            style="@style/AppCore.Title1"
                            android:gravity="end" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dip" >

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_season_appearance_label_character_details"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/d_character_details_season_appearance"
                            style="@style/AppCore.Title2"
                            android:gravity="start" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_season_appearance_character_details"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            style="@style/AppCore.Title1"
                            android:gravity="end" />

                    </TableRow>

                </TableLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>